# FinancIA

financIA-bot/: .env  main.py  pyproject.toml  validate_structure.py
financIA-bot/financIA/: config.py
financIA-bot/financIA/bot/: handlers.py
financIA-bot/financIA/core/: database.py
financIA-bot/financIA_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
financIA-bot/src/core/: categorizer.py
financIA-bot/src/data/processed/: transactions.db
financIA-bot/src/financIA/: config.py
financIA-bot/src/financIA/bot/: handlers.py
financIA-bot/src/financIA/core/: categorizer.py  database.py
financIA-bot/src/financIA/file_parsers/: bank_parser.py
financIA-bot/src/financIA/integrations/: open_finance.py
financIA-bot/src/financIA/services/: analysis_service.py
financIA-bot/src/financIA/utils/: file_validation.py
financIA-bot/src/financIA_bot.egg-info/: SOURCES.txt
financIA-bot/src/integrations/: open_finance.py
financIA-bot/src/services/: analysis_service.py
financIA-bot/src/user_uploads/1580836932/: extrato_20250410_160443.csv
